REVISON 70 - Sept 2 2007
 * Added support for Chinese (Taiwan, Hong Kong and Main Land China) [Ivan Chang ]
 * Added support for pluralization, use pluralize{count, singular, optional_plural_form} in your translation file
 * Added support for localization of AR error messages [based on Ivan Chang's contribution ]
 * 2 new rails localization keys:
   # used by ActionView::Helpers::ActiveRecordHelper.error_messages_for
   active_record_helper_error_description: 'There were problems with the following fields:'
   active_record_helper_header_message: 'X errors prohibited this object from being saved' # 2 arguments you can use :error_count and :failed_object
   translation example: 
   active_record_helper_header_message: #{pluralize({error_count}, 'error')} prohibited this {failed_object} from being saved

REVISON 56 - August 05 2007
 * Improved localize_with_args  [jiman.ryu]

REVISION 54 - July 31 2007
 * Added model error localization [ Guillaume Belleguic ]