@@ -1,0 +1,2 @@
+.DS_Store
+*/.DS_Store
