@@ -153,6 +153,7 @@ Ralph von Der Heyden ralph AT rvdh_DOT_de (German translation)
 jiman.ryu AT gmail http://jasonpa.tistory.com/ (bug fix)
 Guillaume Belleguic guillaume.belleguic AT oceans DOT eu (Model error handling)
 Marcus Derencius derencius AT gmail_dot_com (Brazilian Portuguese translation)
+MrPrise (Hungarian localization)
 
 your name here if you submit a patch :)
 
