@@ -1,0 +1,357 @@
+locale_name: Magyar (HU)
+# ActiveRecord::Errors.default_error_messages
+error_message_inclusion: nem szerepel a listában
+error_message_exclusion: foglalt
+error_message_invalid: érvénytelen
+error_message_confirmation: a megerősítés nem stimmel
+error_message_accepted: el kell fogadni
+error_message_empty: mezőt ki kell tölteni
+error_message_blank: mező nem lehet üres
+error_message_too_long: túl hosszú (maximum %d karakter)
+error_message_too_short: túl rövid (minimum %d karakter)
+error_message_wrong_length: nem megfelelő hosszúságú (%d karaktert kellene megadni)
+error_message_taken: már foglalt
+error_message_not_a_number: nem szám
+
+# used by ActionView::Helpers::DateHelper.distance_of_time_in_words
+date_helper_less_than_x_seconds: kevesebb mint %d másodperc
+date_helper_half_a_minute: fél perc
+date_helper_less_than_a_minute: kevesebb mint egy perc
+date_helper_one_minute: 1 perc
+date_helper_x_minutes: %d perc
+date_helper_one_hour: kb. 1 óra
+date_helper_x_hours: kb. %d óra
+date_helper_one_day: 1 nap
+date_helper_x_days: %d nap
+date_helper_one_month: 1 hónap
+date_helper_x_months: %d hónap
+date_helper_one_year: 1 év
+date_helper_x_years: %d év
+
+# DON'T TRANSLATE, just order
+date_helper_order: [:year, :month, :day] #default Rails is US ordered: :order => [:year, :month, :day]
+
+date_helper_date_formats: # DON'T  TRANSLATE, RE ORDER
+  default: "%Y-%m-%d"
+  short: "%b %e"
+  long: "%B %e, %Y"
+
+date_helper_time_formats: # DON'T  TRANSLATE, RE ORDER
+  default: "%a, %d %b %Y %H:%M:%S %z"
+  short: "%d %b %H:%M"
+  long: "%B %d, %Y %H:%M"
+
+# added at the end of date if your date system doesn't use a 24 hours system
+date_helper_am: de
+date_helper_pm: du
+    
+# used by ActionView::Helpers::NumberHelper.number_to_currency
+number_helper_unit: "Ft"
+number_helper_separator: "." #unit separator (between integer part and fraction part)
+number_helper_delimiter: "," #delimiter between each group of thousands. Example: 1.234.567 
+number_helper_order: [ unit, number ] 
+#to support for instance French format, the order is different: Unit comes last (ex. "1.234,00 €")
+
+# use by +Array#to_sentence()+
+array_connector: 'és'
+array_skip_last_comma: 'false'
+
+# Active Record error messages:
+active_record_helper_error_description: 'A következő mezőkkel vannak problémák:'
+active_record_helper_header_message: "{error_count} hiba akadályozza a(z) {failed_object} mentését"
+
+date_helper_month_names:
+ -              # Leave that line
+   -            # Leave that line
+ - Január
+ - Február
+ - Március
+ - Április
+ - Május
+ - Június
+ - Július
+ - Augusztus
+ - Szeptember
+ - Október
+ - November
+ - December
+
+date_helper_abbr_month_names:
+  -             # Leave that line
+    -           # Leave that line
+  - Jan
+  - Feb
+  - Már
+  - Ápr
+  - Máj
+  - Jún
+  - Júl
+  - Aug
+  - Sze
+  - Okt
+  - Nov
+  - Dec
+
+date_helper_day_names: 
+  - Vasárnap
+  - Hétfő
+  - Kedd
+  - Szerda
+  - Csütörtök
+  - Péntek
+  - Szombat
+
+date_helper_abbr_day_names: 
+  - Va
+  - Hé
+  - Ke
+  - Sze
+  - Cs
+  - Pé 
+  - Szo
+
+countries_list:
+  - Afganisztán
+  - Albánia
+  - Algéria
+  - Amerikai Szamoa
+  - Andorra
+  - Angola
+  - Anguilla
+  - Antarctica
+  - Antigua And Barbuda
+  - Argentina
+  - Armenia
+  - Aruba
+  - Australia
+  - Austria
+  - Azerbaijan
+  - Bahamas
+  - Bahrain
+  - Bangladesh
+  - Barbados
+  - Belarus 
+  - Belgium
+  - Belize
+  - Benin
+  - Bermuda
+  - Bhutan
+  - Bolivia
+  - Bosnia and Herzegowina
+  - Botswana
+  - Bouvet Island
+  - Brazil
+  - British Indian Ocean Territory 
+  - Brunei Darussalam
+  - Bulgaria
+  - Burkina Faso
+  - Burma
+  - Burundi
+  - Cambodia
+  - Cameroon
+  - Canada
+  - Cape Verde
+  - Cayman Islands
+  - Central African Republic
+  - Chad
+  - Chile
+  - China
+  - Christmas Island
+  - Cocos (Keeling) Islands
+  - Colombia
+  - Comoros
+  - Congo
+  - Congo, the Democratic Republic of the
+  - Cook Islands
+  - Costa Rica
+  - Cote d'Ivoire
+  - Croatia
+  - Cuba
+  - Cyprus
+  - Czech Republic
+  - Denmark
+  - Djibouti
+  - Dominica
+  - Dominican Republic
+  - East Timor
+  - Ecuador
+  - Egypt
+  - El Salvador
+  - England
+  - Equatorial Guinea
+  - Eritrea
+  - Espana
+  - Estonia
+  - Ethiopia
+  - Falkland Islands
+  - Faroe Islands
+  - Fiji
+  - Finland
+  - France
+  - French Guiana
+  - French Polynesia
+  - French Southern Territories
+  - Gabon
+  - Gambia 
+  - Georgia
+  - Germany
+  - Ghana
+  - Gibraltar
+  - Great Britain
+  - Greece
+  - Greenland
+  - Grenada
+  - Guadeloupe
+  - Guam
+  - Guatemala
+  - Guinea
+  - Guinea-Bissau
+  - Guyana
+  - Haiti
+  - Heard and Mc Donald Islands
+  - Honduras
+  - Hong Kong
+  - Magyarország
+  - Iceland 
+  - India
+  - Indonesia
+  - Ireland
+  - Israel
+  - Italy
+  - Iran
+  - Iraq
+  - Jamaica
+  - Japan
+  - Jordan
+  - Kazakhstan
+  - Kenya
+  - Kiribati
+  - Korea, Republic of
+  - Korea (South)
+  - Kuwait
+  - Kyrgyzstan
+  - Lao People's Democratic Republic
+  - Latvia
+  - Lebanon
+  - Lesotho
+  - Liberia
+  - Liechtenstein
+  - Lithuania
+  - Luxembourg
+  - Macau
+  - Macedonia
+  - Madagascar
+  - Malawi
+  - Malaysia
+  - Maldives
+  - Mali
+  - Malta
+  - Marshall Islands
+  - Martinique
+  - Mauritania
+  - Mauritius
+  - Mayotte
+  - Mexico
+  - Micronesia, Federated States of
+  - Moldova, Republic of
+  - Monaco
+  - Mongolia
+  - Montserrat
+  - Morocco
+  - Mozambique
+  - Myanmar
+  - Namibia
+  - Nauru
+  - Nepal
+  - Netherlands
+  - Netherlands Antilles
+  - New Caledonia
+  - New Zealand
+  - Nicaragua
+  - Niger
+  - Nigeria
+  - Niue
+  - Norfolk Island
+  - Northern Ireland
+  - Northern Mariana Islands
+  - Norway
+  - Oman
+  - Pakistan
+  - Palau
+  - Panama
+  - Papua New Guinea
+  - Paraguay
+  - Peru
+  - Philippines
+  - Pitcairn
+  - Poland
+  - Portugal
+  - Puerto Rico
+  - Qatar
+  - Reunion
+  - Romania
+  - Russia
+  - Rwanda
+  - Saint Kitts and Nevis
+  - Saint Lucia
+  - Saint Vincent and the Grenadines
+  - Samoa (Independent)
+  - San Marino
+  - Sao Tome and Principe
+  - Saudi Arabia
+  - Scotland
+  - Senegal
+  - Serbia and Montenegro
+  - Seychelles
+  - Sierra Leone
+  - Singapore
+  - Slovakia
+  - Slovenia
+  - Solomon Islands
+  - Somalia
+  - South Africa
+  - South Georgia and the South Sandwich Islands
+  - South Korea
+  - Spain
+  - Sri Lanka
+  - St. Helena
+  - St. Pierre and Miquelon
+  - Suriname
+  - Svalbard and Jan Mayen Islands
+  - Swaziland
+  - Sweden
+  - Switzerland
+  - Taiwan
+  - Tajikistan
+  - Tanzania
+  - Thailand
+  - Togo
+  - Tokelau
+  - Tonga
+  - Trinidad
+  - Trinidad and Tobago
+  - Tunisia
+  - Turkey
+  - Turkmenistan
+  - Turks and Caicos Islands
+  - Tuvalu
+  - Uganda
+  - Ukraine
+  - United Arab Emirates
+  - United Kingdom
+  - United States
+  - United States Minor Outlying Islands
+  - Uruguay
+  - Uzbekistan
+  - Vanuatu
+  - Vatican City State (Holy See)
+  - Venezuela
+  - Viet Nam
+  - Virgin Islands (British)
+  - Virgin Islands (U.S.)
+  - Wales
+  - Wallis and Futuna Islands
+  - Western Sahara
+  - Yemen
+  - Zambia
+  - Zimbabwe
